[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve.smeft.warsaw"
authors = [
    {name = "Aleks SmolkoviÄ", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = "Package providing Renormalization Group Evolution Matrices for the SMEFT in the Warsaw basis"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["rgevolve.smeft.warsaw"]

[tool.setuptools.dynamic]
version = {attr = "rgevolve.smeft.warsaw.__version__"}
